package com.chakir.nisrine.enums;

public enum BienType {
    APPARTEMENT,
    MAISON,
    LOCAL_COMMERCIAL
}
