package com.chakir.nisrine.enums;

public enum RemboursementType {
    MENSUALITE,
    REMBOURSEMENT_ANTICIPE
}
