package com.chakir.nisrine.enums;

public enum StatutType {
    EN_COURS,
    ACCEPTE,
    REJETE
}
